all changes saved latest copy

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,26 +1,5 @@
 
-<!-- <p class="display-5 text-info text-center">User Cart</p> -->
-
-<!-- <div class="table-responsive mt-5">
-
-    <table class="table table-striped table-hover text-center">
-        <thead>
-            <th>Productname</th>
-            <th>Price</th>
-            <th>Description</th>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of cart">
-                <td>{{item.product.productname}}</td>
-                <td>{{item.product.productprice}}</td>
-                <td>{{item.product.productdescription}}</td>
-            </tr>
-        </tbody>
-    </table>
-
-</div> -->
-<!-- https://lh3.googleusercontent.com/proxy/AVm5TsXlP1_8J1JiP4iQCRIwSU6T6YKeUyKI7ik0HB0wxmCQp7FYS28OxpCAi5jL9wDQBlAS5SFXKswStQ8_tjH1 -->
- <div class="body"> 
+  <div class="body"> 
 <div class="row">
     <h2 class="text-center " style="color: blue; "> Shopping cart</h2>
     <div class="text" *ngIf="cart.length===0"><img src="../../assets/cartempty.jpeg" class="img d-block mx-auto" alt=""></div>
@@ -33,32 +12,31 @@
         <div class="col-sm-8">
           <b style="font-size: 30px;">{{item.productname}}</b>   <br>
 
-          
-          <!-- <b style="font-size: 30px;">{{item.product._id}}</b>   <br> -->
-          <!-- <b style="font-size: 30px;">{{item.product.productid}}</b>   <br> -->
-
-
-
+    
          <span>MRP:</span>  <i class="fas fa-rupee-sign"></i>  {{item.productprice}} <br>
-            <!-- {{item.product.productdescription}} -->
+           
             <div class="row mt-4" >
-                <div class="col-sm-3"><button type="button" class="minus bg-danger" style="width: max-content; font-size: 20px; size: 50px;" (click)="minus(item)">-</button> </div>
+                <div class="col-sm-3"><button type="button" class="minus bg-info" style="width: max-content; font-size: 20px; size: 50px;" (click)="minus(item)">-</button> </div>
                 <div class="col-sm-6"><h2 class="text">Quantity:  {{item.quantity}}</h2></div>
                 <div class="col-sm-3"> <button type="button" class="minus bg-success" style="width: max-content;" (click)="plus(item)">+</button></div>
-                <!-- <div class="inline" style="display:flex;">
                
                
                
                
-            </div> -->
-            <!-- (click)="deleteprodincart(item)" -->
-            <div class="col-sm-3">  <button class="btn btn-danger mt-3" (click)="deleteprodincart(item)">Delete</button> </div>
-            <div class="col-sm-3">   <button class="btn btn-success ml-3 mt-3"  (click)="payment()">Checkout</button></div>
+            </div> 
+           
+            <div class="col-sm-8">  <button class="btn btn-danger mt-3 d-block mx-auto" (click)="deleteprodincart(item)">Delete</button> </div>
+          
         </div>
         </div>
     </div>
         </div>
       </div>
-                   <h2 class="text-center">Total Price is : {{sum}}</h2>
+                   <h2 class="text-center" *ngIf="cart.length>0">Total Price is : {{sum}}</h2>
+                   <div class="col">   <button class="btn btn-success mt-3 d-block mx-auto"  *ngIf="cart.length>0" (click)="billing()">Checkout</button></div>
 </div>
- </div> 
+  
+
+
+
+
