--- a/src/app/viewproduct/viewproduct.component.html
+++ b/src/app/viewproduct/viewproduct.component.html
@@ -1,20 +1,22 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
-            <img src={{product.productimage}} alt="" width="100%" class="img h-75 mt-5">
+        <div class="col-sm-5">
+            <img src={{product.productimage}} alt="" style="width: max-content; height: max-content;" width="100%" class="img mt-4">
         </div>
-        <div class=" col-sm-6 d-flex ">
+        <div class=" col-sm-7 d-flex ">
             <div class="align-self-center">
 
-            <h2>{{product.productname }} </h2>
-                <h3><i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h3>
-            <p class="lead">{{product.productdescription | titlecase}}</p>
-            <button class="btn float-center" style="background-color: chocolate; font-weight: bold; color: white; font-size: 20px;" (click)="addProductToCart(product)"><i class="fas fa-cart-plus"></i>Add to cart</button> 
+            <h1 style="font-family:  'Lobster', cursive;">{{product.productname }} </h1>
+                <h2>MRP:<i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h2>
+                <h4>Description:</h4>
+            <p class="lead" style="font-family: 'Courgette', cursive;">{{product.productdescription | titlecase}}</p>
+            <button class="btn float-center" style="background-color: chocolate; font-weight: bold; color: black; font-size: 20px;font-family: 'Lobster', cursive;" (click)="addProductToCart(product)"><i class="fas fa-cart-plus"></i>Add to cart</button> 
         
         </div>
         </div>
         
     </div>
 </div>
+<br>
 
 <app-footer></app-footer>
