--- a/src/app/admin/productlist/productlist.component.html
+++ b/src/app/admin/productlist/productlist.component.html
@@ -44,15 +44,32 @@
 
 
 <div class="container-fluid " style="margin-top:5%;">
+    <!-- search  -->
+    
+    <div class="p-1 bg-dark rounded rounded-pill shadow-sm mb-4 w-50 mx-auto demo">
+        <div class="input-group">
+            <input type="search" style="border:1px solid black;border-radius: 25px ;" class=" form-control  bg-light "  placeholder="Search By Name.." [(ngModel)]="searchTerm" >
+
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-link text-primary mb-1" id="button-addon1" ><i class="fa fa-search fa-2x"></i></button>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
     <h1 class="text-center text-primary ">Product details</h1>
     
 <table class="table table-bordered text-center table-hover table-striped">
     <thead>
         <tr class="m-auto">
-            <!-- <th>Sl.no</th> -->
+             <th>Sl.no</th> 
             <!-- <th>Category</th> -->
-            <th>Product Id</th>
+            <!-- <th>Product Id</th> -->
             <th>Product Name</th>
+            <th>Brand</th>
             <th>Product Price</th>
             <!-- <th>Description</th>            -->
           
@@ -62,9 +79,9 @@
             
         </tr>
     </thead>
-  <tbody *ngFor="let product of products; let i=index">
+  <tbody *ngFor="let product of products | search:searchTerm; let i=index">
         <tr>
-            <!-- <td>{{i+1}}</td> -->
+             <td>{{i+1}}</td> 
 <!-- 
             <td>
                 <div *ngIf="!product.isEdit">{{product.category}}</div>
@@ -74,10 +91,10 @@
 
 
 
-            <td>
+            <!-- <td>
                 <div *ngIf="!product.isEdit">{{product.productid}}</div>
                 <div *ngIf="product.isEdit"><input type="number" class="form-control" name="productid"  [(ngModel)]="product.productid"></div>
-            </td> 
+            </td>  -->
 
 
 
@@ -87,6 +104,11 @@
                 <div *ngIf="!product.isEdit">{{product.productname}}</div>
                 <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productname" [(ngModel)]="product.productname"></div>
             </td> 
+
+            <td>
+                <div *ngIf="!product.isEdit">{{product.productbrand}}</div>
+                <div *ngIf="product.isEdit"><input type="text" class="form-control" name="productbrand" [(ngModel)]="product.productbrand"></div>
+            </td>
             <!-- <td>
                 <div *ngIf="!product.isEdit">{{product.productname}}</div>
                 <div *ngIf="product.isEdit"><input type="text" class="form-control" name="brand" [(ngModel)]="product.brand"></div>
