--- a/src/app/homecards/homecards.component.html
+++ b/src/app/homecards/homecards.component.html
@@ -1,33 +1,4 @@
-<!-- 
-  <div class="container-fluid mt-4"  >
-    <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
-        <div class="col" *ngFor="let product of products" >
 
-            <div class="card h-100 bg-light" style="  border:2px solid black  ;border-radius: 30px;">
-          
-               <span class="vegetarianicon mt-2 " style="margin-left: 10px;  ">⊡</span>  
-              
-                <img src={{product.productimage}} class="card-img-top  p-3 mx-auto"  style="cursor: pointer; height: 200px; width: 160px;"   alt="...">
-                <div class="card-body">
-               <a href="#" style="text-decoration: none; color: black;"> <h3 class="card-title text-center" style="font-family: 'Nanum Myeongjo', serif;">  {{product.productname }}    </h3> </a>     
-                    <h5 class="card-title" >  <h6>MRP:  <i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h6></h5>
-
-                    <h5 class="card-title">   <h6>Brand: {{product.productbrand | titlecase}}</h6></h5>
-                    <h5 class="card-title">   <h6>Description: {{product.productdescription | titlecase}}</h6></h5>
-                    
-                </div>
-                <div class="btn btn-toolbar" style="justify-content: space-between;">
-                <button class="btn btn-info m-2"  style="width: max-content;" (click)="gotoViewProduct(product.productid)">View</button>
-                <button class="btn btn-primary float-right m-2" style="width: max-content;"  (click)="addToCart(product)">Add to cart</button>
-              </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
- -->
 
  <div class="container-fluid mt-4"  >
   <div class="row row-cols-1 row-cols-sm-4 g-4" style="justify-content: center;">
@@ -38,17 +9,18 @@
         
              <span class="vegetarianicon mt-2 " style="margin-left: 10px;  ">⊡</span>  
             
-              <img src={{product.productimage}} class="card-img-top  p-3 mx-auto"  style="cursor: pointer; height: 200px; width: 160px;"   alt="...">
+              <img src={{product.productimage}} class="card-img-top p-3 mx-auto"  style="cursor: pointer; height: 200px; width: 160px; "   alt="...">
               <div class="card-body">
              <a href="#" style="text-decoration: none; color: black;"> <h3 class="card-title text-center" style="font-family: 'Nanum Myeongjo', serif;">  {{product.productname }}    </h3> </a>     
-                  <h5 class="card-title" >  <h6>MRP:  <i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h6></h5>
+                  <h5 class="card-title" > <h6>MRP:  <i class="fas fa-rupee-sign"></i>{{product.productprice  }}</h6></h5>
 
-                  <!-- <h5 class="card-title">   <h6>Brand: {{product.productbrand | titlecase}}</h6></h5> -->
-                  <h5 class="card-title">   <h6>Description: {{product.productdescription | titlecase}}</h6></h5>
+                  <h5 class="card-title">   <h6>Brand: {{product.productbrand | titlecase}}</h6></h5> 
+                  <h5 class="card-title">   <h6>Country of Origin: {{product.countryoforigin | titlecase}}</h6></h5> 
+                  <!-- <h5 class="card-title">   <h6>Description: {{product.productdescription | titlecase}}</h6></h5> -->
                   
               </div>
               <div class="btn btn-toolbar" style="justify-content: space-between;">
-              <button class="btn  m-2"  style="width: max-content; background-color: red; color: white; border-radius: 3px solid red; border:15px" (click)="gotoViewProduct(product.productid)"><i class="far fa-eye-slash"></i>View</button>
+              <button class="btn  m-2"  style="width: max-content; background-color:darkviolet; color: white; border-radius: 15px solid red; border:15px;font-family: Arial, Helvetica, sans-serif;" (click)="gotoViewProduct(product.productid)"><i class="far fa-eye"></i>View</button>
               <button class="btn  float-right m-2" style="width: max-content;background-color:darkblue; color: white; border-radius: 3px solid darkblue; border:15px"  (click)="addToCart(product)"><i class="fas fa-shopping-cart"></i>  Add to cart</button>
             </div>
           </div>
