--- a/src/app/navbar1/navbar1.component.html
+++ b/src/app/navbar1/navbar1.component.html
@@ -5,7 +5,7 @@
       <div class="container-fluid" >
         <!-- #5DA2D5 -->
         <!-- <svg height="512" viewBox="0 0 128 128" width="512" xmlns="http://www.w3.org/2000/svg" id="fi_4017946"><g id="Circle_Grid" data-name="Circle Grid"><circle cx="64" cy="64" fill="#ef5261" r="64"></circle></g><g id="icon"><circle cx="53.659" cy="53.653" fill="#69b0ee" r="28.604"></circle><path d="m82.263 74.395-7.869 7.869-6.705-3.538 11.036-11.036z" fill="#575b6d"></path><path d="m31.986 31.973a30.654 30.654 0 1 0 43.352.013 30.654 30.654 0 0 0 -43.352-.013zm40.578 40.578a26.731 26.731 0 1 1 0-37.79 26.742 26.742 0 0 1 0 37.79z" fill="#575b6d"></path><path d="m72.217 82.9 19.894 19.894a7.55 7.55 0 1 0 10.677-10.677l-19.894-19.899z" fill="#f6b863"></path><path d="m83.12 71.316-11.8 11.8a1.9 1.9 0 0 0 2.68 2.684l11.8-11.8a1.9 1.9 0 0 0 -2.681-2.681z" fill="#eaa14e"></path><path d="m51.837 67.279a2.657 2.657 0 1 1 -2.653-2.66 2.649 2.649 0 0 1 2.653 2.66z" fill="#414451"></path><path d="m49.183 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m63.062 67.279a2.657 2.657 0 1 1 -2.654-2.66 2.65 2.65 0 0 1 2.654 2.66z" fill="#414451"></path><path d="m60.408 68.478a1.2 1.2 0 1 1 1.2-1.2 1.2 1.2 0 0 1 -1.2 1.2z" fill="#dbd8dd"></path><path d="m70.185 47.415-2.775 9.159a1.317 1.317 0 0 1 -1.11.926l-19.584 2.758-2.961-15.558 25.845 1.867a.659.659 0 0 1 .585.848z" fill="#f6c863"></path><path d="m65.761 63.77h-20.318a2.2 2.2 0 1 1 0-4.4h.3l-2.929-17.083h-3.314a.659.659 0 0 1 0-1.317h3.869a.658.658 0 0 1 .649.547l3.152 18.4a.657.657 0 0 1 -.649.769h-1.078a.884.884 0 1 0 0 1.767h20.318a.659.659 0 0 1 0 1.317z" fill="#eeefee"></path><path d="m41.531 40.693v1.812a.1.1 0 0 1 -.095.095h-3.336a1 1 0 0 1 -1-1 1 1 0 0 1 1-1h3.336a.1.1 0 0 1 .095.093z" fill="#575b6d"></path><g fill="#eab54e"><path d="m62.288 55.863a.4.4 0 0 1 -.075-.007.425.425 0 0 1 -.343-.493l1.2-6.722a.425.425 0 1 1 .836.15l-1.2 6.722a.426.426 0 0 1 -.418.35z"></path><path d="m51.27 57.016a.426.426 0 0 1 -.418-.35l-1.552-8.666a.425.425 0 1 1 .836-.15l1.55 8.663a.425.425 0 0 1 -.343.493.388.388 0 0 1 -.073.01z"></path><path d="m56.676 55.863a.425.425 0 0 1 -.425-.425v-6.722a.425.425 0 0 1 .85 0v6.722a.425.425 0 0 1 -.425.425z"></path></g></g></svg> -->
-        <a class="navbar-brand" id="logo" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/Screenshot (364).svg" width="100px" height="40px" alt=""></a>
+        <a class="navbar-brand" id="logo" routerLink="home" style="color: black;font-size: 20px;font-weight: bold;"><img src="../../assets/Screenshot (432).svg" width="150px" height="40px" alt=""></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  >
           <span class="navbar-toggler-icon "></span>
@@ -14,13 +14,17 @@
           <ul class="navbar-nav ms-auto float-end ">
          
         <li class="nav-item">
-        <a class="nav-link" routerLink="home" id="home"  *ngIf="!logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
-        <a class="nav-link" routerLink="home" id="home"  *ngIf="logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Home </a>
+        <a class="nav-link" routerLink="home" id="home"  *ngIf="!logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h18v-10h3zm-5 8h-14v-10.26l7-6.912 7 6.99v10.182zm-5-1h-4v-6h4v6z"/></svg>Home </a>
+
+        <a class="nav-link" routerLink="home" id="home"  *ngIf="logStatus" routerLinkActive="active"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 7.093v-5.093h-3v2.093l3 3zm4 5.907l-12-12-12 12h3v10h18v-10h3zm-5 8h-14v-10.26l7-6.912 7 6.99v10.182zm-5-1h-4v-6h4v6z"/></svg>Home </a>
         </li>
 
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="" id="logout"  (click)="logoutuser()" id="logout"  *ngIf=" logoff()" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >Logout </a>
+          <a class="nav-link" routerLink="" id="logout"  (click)="logoutuser()" id="logout"  *ngIf=" logoff()" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14 19v-.083c-1.178.685-2.542 1.083-4 1.083-4.411 0-8-3.589-8-8s3.589-8 8-8c1.458 0 2.822.398 4 1.083v-2.245c-1.226-.536-2.576-.838-4-.838-5.522 0-10 4.477-10 10s4.478 10 10 10c1.424 0 2.774-.302 4-.838v-2.162zm4-9.592l2.963 2.592-2.963 2.592v-1.592h-8v-2h8v-1.592zm-2-4.408v4h-8v6h8v4l8-7-8-7z"/></svg>Logout </a>
         </li>
 
 
@@ -31,28 +35,9 @@
   <!-----------------------------------------------------------------------LOGIN------------------------------------------------------->
            
   <li class="nav-item">
-    <a class="nav-link" *ngIf="!logoff()"    id="login" routerLink="login"   style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;" > Login</a>
+    <a class="nav-link" *ngIf="!logoff()"    id="login" routerLink="login"   style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;" > 
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 9.408l2.963 2.592-2.963 2.592v-1.592h-8v-2h8v-1.592zm-2-4.408v4h-8v6h8v4l8-7-8-7zm6-3c-1.787 0-3.46.474-4.911 1.295l.228.2 1.396 1.221c1.004-.456 2.114-.716 3.287-.716 4.411 0 8 3.589 8 8s-3.589 8-8 8c-1.173 0-2.283-.26-3.288-.715l-1.396 1.221-.228.2c1.452.82 3.125 1.294 4.912 1.294 5.522 0 10-4.477 10-10s-4.478-10-10-10z"/></svg>Login</a>
 </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -61,7 +46,8 @@
 <!-- -----------------------------------------------------------------REGISTER---------------------------------------------------------- -->
 
      <li class="nav-item">
-   <a class="nav-link" routerLink="register" *ngIf=" !logoff()" id="register"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">Register</a> 
+   <a class="nav-link" routerLink="register" *ngIf=" !logoff()" id="register"  style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M9 19h-4v-2h4v2zm2.946-4.036l3.107 3.105-4.112.931 1.005-4.036zm12.054-5.839l-7.898 7.996-3.202-3.202 7.898-7.995 3.202 3.201zm-6 8.92v3.955h-16v-20h7.362c4.156 0 2.638 6 2.638 6s2.313-.635 4.067-.133l1.952-1.976c-2.214-2.807-5.762-5.891-7.83-5.891h-10.189v24h20v-7.98l-2 2.025z"/></svg>Register</a> 
    <!-- <a class="nav-link" href="#"   *ngIf="logStatus" id="register" data-bs-toggle="modal" data-bs-target="#myModal" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">Register</a>    -->
       <!-------------------- modal ------------------>
    
@@ -70,30 +56,6 @@
 
 
 
-
-
-
-
-            <!-- <li class="nav-item">
-             <a class="nav-link" routerLink="wishlist" routerLinkActive="active" style="color: black;font-size: 20px;font-weight: bold; font-family: 'Courgette', cursive;color: black;">WishList</a>
-            </li>
-           -->
-
- 
-<!--  
-              <div class="input-group md-form form-md form-2 pl-0">
-               <input class="form-control my-0 py-1 amber-border" type="search" [(ngModel)]="searchTerm" placeholder="Search By Name" style="font-size: 15px;" aria-label="Search">
-               <div class="input-group-append">
-                 <span class="input-group-text amber lighten-3" id="basic-text1"><i class="fas fa-search fa-2x text-dark"
-                                                                                    aria-hidden="true"> </i></span>
-               </div>
-             </div>  -->
-
-
-             <!-- <li class="nav-item">
-              <a class="nav-link" id="cart" routerLink="cart" routerLinkActive="active" style="color: black;font-size: 20px;font-weight: bold;font-family: 'Courgette', cursive;color: black;"><i class="fas fa-shopping-cart" style="font-size: x-large;"></i></a>
-            </li> -->
- 
            
           </ul>
           
